xidlc/tests/snapshots/codegen_snapshot__ts__enum_simple_comma.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
enum_simple_comma.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    export type A = "B" | "C";

export {};
===============
enum_simple_comma.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    export const ASchema = z.enum(["B", "C"]);
