xidlc/tests/snapshots/codegen_snapshot__ts__except_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
except_dcl.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    

export interface HelloWorld {
        
            a: u8;
                b: Array<u16>;
                c: Array<Array<string>>;
                c: Array<u8>;
                d: string;
                d: string;
                d: number;
            }

export {};
===============
except_dcl.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    
    export const HelloWorldSchema = z.object({
        
            a: u8Schema,
        
            b: z.array(u16Schema).length(10),
        
            c: z.array(z.array(z.coerce.string()).length(10)).length(20),
        
            c: z.array(u8Schema),
        
            d: z.coerce.string(),
        
            d: z.coerce.string(),
        
            d: z.number()
        
    });
